latte/tests/bad/return/method.lat
class A {
  int f() {
    if (2 < 3) {
    } else {
      return 1;
    }
  }
}

int main() {
  return 0;
}
